# mpp_uvc_mjpeg_decode_hdmi_show

./: CMakeLists.txt  README.md  main.cpp
v4l2/: v4l2.cpp  v4l2.h
